<resources>
    <string name="app_name">Zunder</string>
    <!-- Register -->
    <string name="activity_register_last_name">Last name</string>
    <string name="activity_register_first_name">First name</string>
    <string name="activity_register_email">Email</string>
    <string name="activity_register_password">Password</string>
    <string name="activity_register_register">Register</string>
    <string name="activity_register_toolbar_title">Register</string>
    <string name="activity_product_list_toolbar_title">Products</string>
    <string name="activity_register_loading_dialog_title">Please wait</string>
    <string name="activity_register_loading_dialog_message">Registering…</string>
    <string name="activity_register_email_error_validation">Email address is not valid</string>
    <string name="activity_register_first_name_error_validation">First name must not be empty</string>
    <string name="activity_register_last_name_error_validation">Last name must not be empty</string>

    <!-- Login -->
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailerror">Email address is not valid</string>
    <string name="passwordrror">Password should be at least 8 characters long</string>
    <string name="activity_login_loading_dialog_title">Please wait</string>
    <string name="activity_login_loading_dialog_message">Logging in…</string>
    <!-- Products -->
    <string name="location">Locations</string>
    <string name="calendar">Calendar</string>
    <string name="car">Car Sharing</string>
    <string name="Inbox">Inbox</string>
    <string name="ecolock">EcoLock</string>
    <string name="scontract">Smart Contract</string>
    <string name="guradain">GuardAIn</string>
    <string name="wallet">My Wallet</string>
    <string name="send">Send</string>
    <string name="history">History</string>
    <string name="adress">Address</string>
    <string name="sett">Wallet Settings</string>
    <string name="bringWallet"><u>Import Wallet</u></string>
    <string name="newwallet">Tap to generate a new wallet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showprivatekey">Show Private Key</string>
    <string name="dontshowtotpublic">Take care on where you save your private key! This key can be used to recover/steal your wallet, including your funds.</string>
    <string name="understand">Type \"I understand\"</string>
    <string name="scanner">QR Scanner</string>
    <string name="scanntext">Scan a QR code to send a quick payment or add an address to Bookmark</string>
    <string name="pass">Cipher Wallet</string>
    <string name="walletsettin">Wallet Settings</string>
    <string name="voting">Activate voting</string>
    <string name="sned">New Transaction</string>
    <string name="passcode">Enable Passcode</string>
    <string name="title_activity_wallet_history">WalletHistory</string>
    <string name="balance">Balance</string>
    <string name="ebstext">European Blockchain Solutions</string>
    <string name="ebsinfotext">European Blockchain Solutions is a DAO
        (Decentralized Autonomour Organization) specialised in offering
        peer-to-peer solutions for economic growth for a network of consumers
        and businesses within ‘Smart Cities’. EBS born in 2016 as small project
        group of blockchain enthusiasts sharing the same goal: Research. Now
        European Blockchain Solutions is focused on offering services for
        small-medium businesses that want to increase their cash flow with focus
        on cybersecurity and transparency using distributed ledgers.</string>
    <string name="mssage">Send a message</string>
    <string name="portfolio">Portfolio</string>
    <string name="ratiung">Rate us!</string>
    <string name="sconractt">Smart Contract</string>
    <string name="contracttext">Templates for any given case and with a custom approach. The most beneficial service to provide a service within Zunder with an Proof of Fraud and no middlemen.</string>
    <string name="Slock">Smart Lock</string>
    <string name="slocktect">Physical lock connected to Zunder. The Smart Lock is connected to the network through a Smart Contract built into the lock.</string>
    <string name="aitext">AI-based node powered by a Smart Contract able to read and process other’s Smart Contracts, nodes, internal information and structure to provide a Proof of Fraud and avoid corruptive practices.</string>
    <string name="ai">GuardAIn</string>
    <string name="workingtiressly">We are working tirelessly to bring new and exciting features to Zunder!</string>
    <string name="register"><![CDATA[>Don\'t have an account yet? Register]]></string>
    <string name="taptogeneratemarker">Tap on the map where your business is located</string>
    <string name="confirmation">confirm</string>
    <string name="textblockforcompanysection">Association or Companies are groups of individuals which can create a collective entity able to act as a DAO. The members of an association have access to propose and sign to perform group transactions.</string>
    <string name="inbox">Inbox</string>
    <string name="gps">Locations</string>
    <string name="calendarx">Calendar</string>
    <string name="tittleCalendar">Deliver parcel to John</string>
    <string name="dateforcalendar">Friday at 09:30</string>

</resources>
