<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="280dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView15"
                                android:layout_toEndOf="@+id/imageView4"
                                android:layout_toRightOf="@+id/imageView4"
                                android:fontFamily="@font/roboto"
                                android:text="@string/contracttext"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="40dp"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="13dp"
                                android:layout_toEndOf="@+id/imageView4"
                                android:layout_toRightOf="@+id/imageView4"
                                android:fontFamily="@font/comfortaa_light"
                                android:text="@string/sconractt"
                                android:textColor="@android:color/black"
                                android:textSize="24sp" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="125dp"
                                android:layout_height="125dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:src="@drawable/scontract" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileHRule2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dip"
                            android:layout_weight="10"
                            android:background="#ddd" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="280dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView10"
                                android:layout_toEndOf="@+id/imageView7"
                                android:layout_toRightOf="@+id/imageView7"
                                android:fontFamily="@font/roboto"
                                android:text="@string/aitext"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignEnd="@+id/textView3"
                                android:layout_alignParentTop="true"
                                android:layout_alignRight="@+id/textView3"
                                android:layout_marginEnd="80dp"
                                android:layout_marginRight="80dp"
                                android:fontFamily="@font/comfortaa_light"
                                android:text="@string/ai"
                                android:textColor="@android:color/black"
                                android:textSize="24sp" />

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="125dp"
                                android:layout_height="125dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:src="@drawable/ecolock" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileHRule3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dip"
                            android:layout_weight="10"
                            android:background="#ddd" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="280dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView12"
                                android:layout_toEndOf="@+id/imageView14"
                                android:layout_toRightOf="@+id/imageView14"
                                android:fontFamily="@font/roboto"
                                android:text="@string/slocktect"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="64dp"
                                android:layout_marginStart="64dp"
                                android:layout_marginTop="17dp"
                                android:layout_toEndOf="@+id/imageView14"
                                android:layout_toRightOf="@+id/imageView14"
                                android:fontFamily="@font/comfortaa_light"
                                android:text="@string/Slock"
                                android:textColor="@android:color/black"
                                android:textSize="24sp" />

                            <ImageView
                                android:id="@+id/imageView14"
                                android:layout_width="125dp"
                                android:layout_height="125dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="11dp"
                                android:layout_marginStart="11dp"
                                android:src="@drawable/bike" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileHRule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dip"
                            android:layout_weight="10"
                            android:background="#ddd" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <LinearLayout
        android:id="@+id/layoutForStars"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/emptystar" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/emptystar" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/emptystar" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/emptystar" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/emptystar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/roboto"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:text="@string/ratiung"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>

