<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ebs.zunderapp.WalletHistory">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lighGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/walletHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gotosend"
            android:layout_alignBottom="@+id/gotosend"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/history"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gotosend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gotowallet"
            android:layout_alignBottom="@+id/gotowallet"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto"
            android:text="@string/send"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/gotowallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:fontFamily="@font/roboto"
            android:text="@string/wallet"
            android:textSize="24sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="10"
            android:background="#ddd" />

        <RelativeLayout
            android:id="@+id/dammiiit"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"
            app:layout_constraintBottom_toTopOf="@+id/UpperNavbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.237">

            <LinearLayout
                android:id="@+id/jamon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="196dp">

            </LinearLayout>

            <EditText
                android:id="@+id/walletInput"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:defaultFocusHighlightEnabled="false"
                android:fontFamily="@font/roboto"
                android:hint="Enter address"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="12dp"
                android:layout_weight="10"
                android:background="#ddd" />

        </RelativeLayout>
    </RelativeLayout>

    <WebView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
